# $Id$

Griffith ChangeLog
------------------
(c) 2005-2009  Vasco Nunes, Piotr Ożarowski


2009-07-05  Piotr Ożarowski
	* Use SQLAlchemy's PickleType to store search conditions
	  (old rules are removed without warning - beta version privilege ;)
	* Remove ilike from search criteria

2009-07-04  Piotr Ożarowski
	* Version changed to 0.10-beta3+svn
	* [#305123] If Region 0 (no region data) is selected, save "0" in
	  database otherwise default region will be used
	* Mail content can be translated again (gettext issue fixed)
	* [#269865] Don't change movie plugin selection after adding a movie
	* Rollback all pending operations before creating new database
	* Poster window (if visible) is updated along with current movie change

2009-07-03  Michael Jahn
	* updated IMDb plugin
	* added Ant Movie Catalog import plugin

---- 0.10-beta3 ----

2009-06-11  Piotr Ożarowski
	* Don't try to open advfilter window if it's already opened
	* Add "Full screen" switch in View menu
	* Add "Open search window" in Tools menu
	* Add "Select database" in File menu (shortcut to preferences page)
	* Close poster viewer window if poster button clicked again
	* Add suggestions for database names (taken from .db file names)
	* Translation files synchronized with Rosetta
	* Releasing 0.10-beta3

2009-06-10  Piotr Ożarowski
	* Restoring from backup finally works with external databases
	* Don't save full paths in backups
	* Backup from MySQL fixed

2009-06-08  Piotr Ożarowski
	* Restoring from backup to PostgreSQL/MySQL partially works via merging

2009-06-07  Piotr Ożarowski
	* Recognize more resolution aliases

2009-05-24  Michael Jahn
	* updated CineMovies, FilmAffinity, FilmDb, OFDb plugin
	* added proxy support for MovieMeter plugin

2009-05-18  Michael Jahn
	* [#377417] URL contains non-ASCII characters

2009-05-05  Michael Jahn
	* added MovieMeter plugin

2009-04-17  Michael Jahn
	* updated FilmAffinity plugin
	* updated Filmtipset plugin

2009-04-16  Michael Jahn